fix(): added line break on mobile

--- a/src/components/home/homecomponents/HomeComponent.css
+++ b/src/components/home/homecomponents/HomeComponent.css
@@ -229,6 +229,10 @@
     letter-spacing: 1px;
     -webkit-text-stroke: 1px white;
   }
+  .hero-title-part,
+  .hero-title-x {
+    display: block;
+  }
   .hero-subtitle {
     font-size: 0.85rem;
     margin-top: 10px;
